exchange rate client
